--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
     <head>
-        <title>Página de Inicio</title>
+        <title>Hospital Dr. Ricardo Gutierréz</title>
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         <style type="text/css">
             div.buscador {
