--- a/index.html
+++ b/index.html
@@ -4,40 +4,7 @@
     <head>
         <title>Hospital Dr. Ricardo Gutierréz</title>
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-        <style type="text/css">
-            div.buscador {
-                float: right;
-            }
-
-            div.texto-info {
-                display: inline-block;
-                margin-left: 70px;
-                margin-right: 70px;
-            }
-
-            div.contenedor-info {
-                display: flex;
-                justify-content: center;
-            }
-
-            footer.pie {
-                position: absolute;
-                bottom: 0;
-                width: 99%;
-            }
-
-            p.parrafo-pie {
-                float: left;
-                margin: 0.3%;
-            }
-
-            p.parrafo-version {
-                float: right;
-                margin: 0.3%;
-            }
-
-        </style>
-    </head>
+        <link rel="stylesheet" type="text/css" href="css/index.css"> </head>
 
     <body>
         <!-- BARRA DE NAVEGACION -->
