paso los nombres de las clases css a ingles, y agrego comentarios en el css

--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
     <body>
         <!-- BARRA DE NAVEGACION -->
         <nav> LOGO | <a href="">Hospital Dr. Ricardo Gutierréz</a> |
-            <div class="buscador">
+            <div class="search-container">
                 <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda"> <button> Busqueda </button> <a href="login.html"> Login</a>                    </form>
             </div>
         </nav> <br>
         <hr>
         <!-- RAYA SEPARADORA -->
         <!-- INFORMACION DE LA PAGINA -->
-        <div class="contenedor-info">
-            <div class="texto-info">
+        <div class="label-text-container">
+            <div class="label-text">
                 <h3> TITULO 1 </h3>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                     magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                     commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
                     nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
                     anim id est laborum. </p> <button> Más info >></button> </div>
-            <div class="texto-info">
+            <div class="label-text">
                 <h3> TITULO 2 </h3>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                     magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                     commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
                     nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
                     anim id est laborum. </p> <button> Más info >></button> </div>
-            <div class="texto-info">
+            <div class="label-text">
                 <h3> TITULO 3 </h3>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                     magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -40,10 +40,10 @@
                     anim id est laborum. </p> <button> Más info >></button> </div>
         </div>
     </body>
-    <footer class="pie">
+    <footer class="bottom-page-footer">
         <hr>
-        <p class="parrafo-pie">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
-        <p class="parrafo-version">v 0.1.0</p>
+        <p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
+        <p class="right-footer-paragraph">v 0.1.0</p>
     </footer>
 
 </html>
