no hace falta el <br> en esta linea separadora, queda muy grande sino

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <div class="search-container">
                 <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda"> <button> Busqueda </button> <a href="login.html"> Login</a>                    </form>
             </div>
-        </nav> <br>
-        <hr>
+        </nav>
         <!-- RAYA SEPARADORA -->
+        <hr>
         <!-- INFORMACION DE LA PAGINA -->
         <div class="label-text-container">
             <div class="label-text">
