--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Hospital Dr. Ricardo Gutierréz</title>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<link rel="stylesheet" type="text/css" href="login.css"> 
+		<link rel="stylesheet" type="text/css" href="/css/login.css"> 
 
 		<!-- BARRA DE NAVEGACION -->
 		<nav> 
