--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Hospital Dr. Ricardo Gutierréz</title>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<link rel="stylesheet" type="text/css" href="/css/login.css"> 
+		<link rel="stylesheet" type="text/css" href="login.css"> 
 
 		<!-- BARRA DE NAVEGACION -->
 		<nav> 
@@ -17,11 +17,13 @@
 <body>
 	<div class="menuLogueo">
 		<form action= "#" method="post">
+			Usuario<br>
 			<input type="text" name="usuario" placeholder="Usuario"> </input>
 			<br> </br>
+			Contraseña<br>
 			<input type="password" name="contra" placeholder="Contraseña"> </input>
 			<br> </br>
-			<input type= "submit" value= "Aceptar"> </input>
+			<div class="botonAceptar"> <input type= "submit" value= "Aceptar"> </input> </div>
 		</form>
 	</div>
 </body>
