Se agregó que los campos usuario y contraseña no puedan estar vacíos

--- a/login.html
+++ b/login.html
@@ -18,10 +18,10 @@
 	<div class="menuLogueo">
 		<form action= "#" method="post">
 			Usuario<br>
-			<input type="text" name="usuario" placeholder="Usuario"> </input>
+			<input type="text" required name="usuario" placeholder="Usuario"> </input>
 			<br> </br>
 			Contraseña<br>
-			<input type="password" name="contra" placeholder="Contraseña"> </input>
+			<input type="password" required name="contra" placeholder="Contraseña"> </input>
 			<br> </br>
 			<div class="botonAceptar"> <input type= "submit" value= "Aceptar"> </input> </div>
 		</form>
