--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
         <!-- BARRA DE NAVEGACION -->
         <nav> LOGO | <a href="">Hospital Dr. Ricardo Gutierréz</a> |
             <div class="search-container">
-                <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda"> <button> Busqueda </button> <a href="login.html"> Login</a>                    </form>
+                <form action="#"> 
+                    <input type="search" placeholder="Buscar.." name="busqueda"> 
+                    <button> Busqueda </button> 
+                    <a href="login.html"> Login</a> 
+                </form>
             </div>
         </nav>
         <!-- RAYA SEPARADORA -->
