--- a/administracion.html
+++ b/administracion.html
@@ -4,7 +4,9 @@
   <head>
     <title>Administracion</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="css/administracion.css"> </head>
+    <link rel="stylesheet" type="text/css" href="css/administracion.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    </head>
   <nav> <a href="#Inicio">Inicio</a> <a href="#Paciente">Paciente</a>
     <div class="search-container">
       <div class="dropdown"> <button class="dropbtn">Administracion&darr;</button>
