--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <head>
         <title>Hospital Dr. Ricardo Gutierréz</title>
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-        <link rel="stylesheet" type="text/css" href="css/index.css"> </head>
+        <link rel="stylesheet" type="text/css" href="css/index.css"> 
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+    </head>
 
     <body>
         <!-- BARRA DE NAVEGACION -->
