--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
 		<title>Hospital Dr. Ricardo Gutierréz</title>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 		<link rel="stylesheet" type="text/css" href="/css/login.css"> 
+		<link rel="stylesheet" type="text/css" href="/css/style.css"> 	
 
 		<!-- BARRA DE NAVEGACION -->
 		<nav> 
