--- a/index.html
+++ b/index.html
@@ -29,21 +29,30 @@
                     magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                     commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
                     nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                    anim id est laborum. </p> <button> Más info >></button> </div>
+                    anim id est laborum. 
+                </p> 
+                <button> Más info >></button> 
+            </div>
             <div class="label-text">
                 <h3 class="label-text-header"> TITULO 2 </h3>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                     magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                     commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
                     nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                    anim id est laborum. </p> <button> Más info >></button> </div>
+                    anim id est laborum. 
+                </p> 
+                <button> Más info >></button> 
+            </div>
             <div class="label-text">
                 <h3 class="label-text-header"> TITULO 3 </h3>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                     magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                     commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
                     nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                    anim id est laborum. </p> <button> Más info >></button> </div>
+                    anim id est laborum. 
+                </p> 
+                <button> Más info >></button> 
+            </div>
         </div>
     </body>
     <footer class="bottom-page-footer">
