Correcciones con el validador html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <!-- BARRA DE NAVEGACION -->
-        <nav> LOGO | <a href="">Hospital Dr. Ricardo Gutierréz</a> |
+        <nav> LOGO | <a href="#">Hospital Dr. Ricardo Gutierréz</a> |
             <div class="search-container">
                 <form action="#"> 
                     <input type="search" placeholder="Buscar.." name="busqueda"> 
