--- a/login.html
+++ b/login.html
@@ -1,37 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
 
-	<head>
-		<title>Hospital Dr. Ricardo Gutierréz</title>
-		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<link rel="stylesheet" type="text/css" href="/css/login.css"> 
-		<link rel="stylesheet" type="text/css" href="/css/style.css"> 	
-
-		<!-- BARRA DE NAVEGACION -->
-		<nav> 
-			LOGO | <a>Hospital Dr. Ricardo Gutierréz</a> |
-		</nav> 
-		<hr>
-
-	</head>
+<head>
+	<title>Hospital Dr. Ricardo Gutierréz</title>
+	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+	<link rel="stylesheet" type="text/css" href="/css/login.css">
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<!-- BARRA DE NAVEGACION -->
+	<nav> LOGO | <a>Hospital Dr. Ricardo Gutierréz</a> </nav>
+</head>
+<!-- RAYA SEPARADORA -->
+<hr>
 
 <body>
-	<div class="menuLogueo">
-		<form action= "#" method="post">
-			Usuario<br>
-			<input type="text" required name="usuario" placeholder="Usuario"> </input>
-			<br> </br>
-			Contraseña<br>
-			<input type="password" required name="contra" placeholder="Contraseña"> </input>
-			<br> </br>
-			<div class="botonAceptar"> <input type= "submit" value= "Aceptar"> </input> </div>
+	<div class="login-menu">
+		<form action="#" method="post"> Usuario<br> <input type="text" required name="usuario" placeholder="Usuario"> </input> <br> </br> Contraseña<br>
+			<input
+			 type="password" required name="contra" placeholder="Contraseña"> </input> <br> </br>
+				<div class="login-accept-button"> <input type="submit" value="Aceptar"> </input>
+				</div>
 		</form>
 	</div>
 </body>
-
 <!-- CODIGO DUPLICADO. DEBE IR EN UN ARCHIVO QUE SE INCLUYA EN TODOS -->
-	<footer class="bottom-page-footer">
-		<hr>
-		<p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
-		<p class="right-footer-paragraph">v 0.1.0</p>
-	</footer>
+<footer class="bottom-page-footer">
+	<hr>
+	<p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
+	<p class="right-footer-paragraph">v 0.1.0</p>
+</footer>
+
+</html>
