correccion en tags html y head

--- a/administracion.html
+++ b/administracion.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html >
 <html lang="es">
 
-  <head>
-    <title>Administracion</title>
-    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="css/administracion.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    </head>
+<head>
+  <title>Administracion</title>
+  <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+  <link rel="stylesheet" type="text/css" href="css/administracion.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <nav> <a href="#Inicio">Inicio</a> <a href="#Paciente">Paciente</a>
     <div class="search-container">
       <div class="dropdown"> <button class="dropbtn">Administracion&darr;</button>
@@ -15,15 +14,16 @@
       <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda"> <button> Busqueda </button> <a href="login.html"> Login</a>        </form>
     </div>
   </nav>
-  <hr>
+</head>
+<!-- RAYA SEPARADORA -->
+<hr>
 
-  <body> </body>
+<body> </body>
+<!-- CODIGO DUPLICADO. DEBE IR EN UN ARCHIVO QUE SE INCLUYA EN TODOS -->
+<footer class="bottom-page-footer">
+  <hr>
+  <p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
+  <p class="right-footer-paragraph">v 0.1.0</p>
+</footer>
 
 </html>
-
-<!-- CODIGO DUPLICADO. DEBE IR EN UN ARCHIVO QUE SE INCLUYA EN TODOS -->
-	<footer class="bottom-page-footer">
-		<hr>
-		<p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
-		<p class="right-footer-paragraph">v 0.1.0</p>
-	</footer>
