WCAG2 Rule 75, en los input hay que agregar los atributos id y title y tienen que ser igual al name

--- a/login.html
+++ b/login.html
@@ -7,18 +7,25 @@
 	<link rel="stylesheet" type="text/css" href="/css/login.css">
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 	<!-- BARRA DE NAVEGACION -->
-	<nav> LOGO | <a>Hospital Dr. Ricardo Gutierréz</a> </nav>
+	<nav> LOGO |
+		<a>Hospital Dr. Ricardo Gutierréz</a>
+	</nav>
 </head>
 <!-- RAYA SEPARADORA -->
 <hr>
 
 <body>
 	<div class="login-menu">
-		<form action="#" method="post"> Usuario<br> <input type="text" required name="usuario" placeholder="Usuario"> </input> <br> </br> Contraseña<br>
-			<input
-			 type="password" required name="contra" placeholder="Contraseña"> </input> <br> </br>
-				<div class="login-accept-button"> <input type="submit" value="Aceptar"> </input>
-				</div>
+		<form action="#" method="post"> Usuario
+			<br>
+			<input type="text" required name="usuario" id="usuario" title="usuario" placeholder="Usuario"> </input>
+			<br> </br> Contraseña
+			<br>
+			<input type="password" required name="contra" id="contra" title="contra" placeholder="Contraseña"> </input>
+			<br> </br>
+			<div class="login-accept-button">
+				<input type="submit" value="Aceptar"> </input>
+			</div>
 		</form>
 	</div>
 </body>
