--- a/administracion.html
+++ b/administracion.html
@@ -6,12 +6,23 @@
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   <link rel="stylesheet" type="text/css" href="css/administracion.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <nav> <a href="#Inicio">Inicio</a> <a href="#Paciente">Paciente</a>
+  <nav>
+    <a href="#Inicio">Inicio</a>
+    <a href="#Paciente">Paciente</a>
     <div class="search-container">
-      <div class="dropdown"> <button class="dropbtn">Administracion&darr;</button>
-        <div class="dropdown-content"> <a href="#">Usuarios</a> <a href="#Roles">Roles</a> <a href="#Permisos">Permisos</a> </div>
+      <div class="dropdown">
+        <button class="dropbtn">Administracion&darr;</button>
+        <div class="dropdown-content">
+          <a href="#">Usuarios</a>
+          <a href="#Roles">Roles</a>
+          <a href="#Permisos">Permisos</a>
+        </div>
       </div>
-      <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda"> <button> Busqueda </button> <a href="login.html"> Login</a> </form>
+      <form action="#">
+        <input type="search" placeholder="Buscar.." name="busqueda">
+        <button> Busqueda </button>
+        <a href="login.html"> Login</a>
+      </form>
     </div>
   </nav>
 </head>
