--- a/login.html
+++ b/login.html
@@ -6,32 +6,19 @@
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href="/css/login.css">
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
-	<!-- BARRA DE NAVEGACION -->
-	<nav> LOGO |
-		<a>Hospital Dr. Ricardo Gutierréz</a>
-	</nav>
-</head>
-<!-- RAYA SEPARADORA -->
-<hr>
+	<nav> LOGO | <a href="index.html">Hospital Dr. Ricardo Gutierréz</a> </nav>
+</head> <hr>
 
 <body>
 	<div class="login-menu">
-		<form action="#" method="post"> Usuario
-			<br>
-			<input type="text" required name="usuario" id="usuario" title="usuario" placeholder="Usuario"> </input>
-			<br> </br> Contraseña
-			<br>
-			<input type="password" required name="contra" id="contra" title="contra" placeholder="Contraseña"> </input>
-			<br> </br>
-			<div class="login-accept-button">
-				<input type="submit" value="Aceptar"> </input>
-			</div>
+		<form action="#" method="post"> Usuario <br> <input type="text" required name="usuario" id="usuario" title="usuario" placeholder="Usuario"> <br> </br> Contraseña <br>
+			<input
+			 type="password" required name="contra" id="contra" title="contra" placeholder="Contraseña"> <br> </br>
+				<div class="login-accept-button"> <input type="submit" value="Aceptar"> </div>
 		</form>
 	</div>
 </body>
-<!-- CODIGO DUPLICADO. DEBE IR EN UN ARCHIVO QUE SE INCLUYA EN TODOS -->
-<footer class="bottom-page-footer">
-	<hr>
+<footer class="bottom-page-footer"> <hr>
 	<p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
 	<p class="right-footer-paragraph">v 0.1.0</p>
 </footer>
