agrego link a la pagina principal

--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href="/css/login.css">
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
-	<nav> LOGO | <a href="index.html">Hospital Dr. Ricardo Gutierréz</a> </nav>
+	<nav> LOGO <a href="index.html">Hospital Dr. Ricardo Gutierréz</a> </nav>
 </head> <hr>
 
 <body>
