--- a/login.html
+++ b/login.html
@@ -5,11 +5,10 @@
 	<title>Hospital Dr. Ricardo Gutierréz</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href="/css/login.css">
-	<link rel="stylesheet" type="text/css" href="/css/style.css">
-	<nav> LOGO <a href="index.html">Hospital Dr. Ricardo Gutierréz</a> </nav>
-</head> <hr>
+	<link rel="stylesheet" type="text/css" href="/css/style.css"> </head>
 
 <body>
+	<nav> LOGO <a href="index.html">Hospital Dr. Ricardo Gutierréz</a> </nav> <hr>
 	<div class="login-menu">
 		<form action="#" method="post"> Usuario <br> <input type="text" required name="usuario" id="usuario" title="usuario" placeholder="Usuario"> <br> </br> Contraseña <br>
 			<input
