los tag br no se cierran

--- a/login.html
+++ b/login.html
@@ -10,10 +10,9 @@
 <body>
 	<nav> LOGO <a href="index.html">Hospital Dr. Ricardo Gutierréz</a> </nav> <hr>
 	<div class="login-menu">
-		<form action="#" method="post"> Usuario <br> <input type="text" required name="usuario" id="usuario" title="usuario" placeholder="Usuario"> <br> </br> Contraseña <br>
-			<input
-			 type="password" required name="contra" id="contra" title="contra" placeholder="Contraseña"> <br> </br>
-				<div class="login-accept-button"> <input type="submit" value="Aceptar"> </div>
+		<form action="#" method="post"> Usuario <br> <input type="text" required name="usuario" id="usuario" title="usuario" placeholder="Usuario"> <br> Contraseña <br> <input type="password"
+			 required name="contra" id="contra" title="contra" placeholder="Contraseña"> <br>
+			<div class="login-accept-button"> <input type="submit" value="Aceptar"> </div>
 		</form>
 	</div>
 </body>
