--- a/login.html
+++ b/login.html
@@ -2,23 +2,27 @@
 <html lang="es">
 
 <head>
-	<title>Hospital Dr. Ricardo Gutierréz</title>
-	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-	<link rel="stylesheet" type="text/css" href="/css/login.css">
-	<link rel="stylesheet" type="text/css" href="/css/style.css"> </head>
+  <title>Hospital Dr. Ricardo Gutierréz</title>
+  <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+  <link rel="stylesheet" type="text/css" href="css/login.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css"> 
+</head>
 
 <body>
-	<nav> LOGO <a href="index.html">Hospital Dr. Ricardo Gutierréz</a> </nav> <hr>
-	<div class="login-menu">
-		<form action="#" method="post"> Usuario <br> <input type="text" required name="usuario" id="usuario" title="usuario" placeholder="Usuario"> <br> Contraseña <br> <input type="password"
-			 required name="contra" id="contra" title="contra" placeholder="Contraseña"> <br>
-			<div class="login-accept-button"> <input type="submit" value="Aceptar"> </div>
-		</form>
-	</div>
-	<footer class="bottom-page-footer"> <hr>
-		<p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
-		<p class="right-footer-paragraph">v 0.1.0</p>
-	</footer>
+  <nav> LOGO <a href="index.html">Hospital Dr. Ricardo Gutierréz</a> </nav>
+  <hr>
+  <div class="login-menu">
+    <form action="#" method="post">
+      <div>Usuario </div> <input type="text" required name="usuario" id="usuario" title="usuario" placeholder="Usuario">
+      <div>Contraseña </div> <input type="password" required name="contra" id="contra" title="contra" placeholder="Contraseña">      <br>
+      <div class="login-accept-button"> <input type="submit" value="Aceptar"> </div>
+    </form>
+  </div>
+  <footer class="bottom-page-footer">
+    <hr>
+    <p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
+    <p class="right-footer-paragraph">v 0.1.0</p>
+  </footer>
 </body>
 
 </html>
