Login: salto de linea antes del boton aceptar

--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
   <div class="login-menu">
     <form action="#" method="post">
       <div>Usuario </div> <input type="text" required name="usuario" id="usuario" title="usuario" placeholder="Usuario">
-      <div>Contraseña </div> <input type="password" required name="contra" id="contra" title="contra" placeholder="Contraseña">      <br>
+      <div>Contraseña </div> <input type="password" required name="contra" id="contra" title="contra" placeholder="Contraseña">      <br> <br>
       <div class="login-accept-button"> <input type="submit" value="Aceptar"> </div>
     </form>
   </div>
