--- a/administracion.html
+++ b/administracion.html
@@ -1,40 +1,28 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
-  <title>Hospital Dr. Ricardo Gutierrez - Administracion</title>
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   <link rel="stylesheet" type="text/css" href="css/administracion.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <nav>
-    <a href="#Inicio">Inicio</a>
-    <a href="#Paciente">Paciente</a>
+  <title>Hospital Dr. Ricardo Gutierrez - Administración</title>
+</head>
+
+<body>
+  <nav> <a href="index.html">Inicio</a> <a href="#Paciente">Paciente</a>
     <div class="search-container">
-      <div class="dropdown">
-        <button class="dropbtn">Administracion&darr;</button>
-        <div class="dropdown-content">
-          <a href="#">Usuarios</a>
-          <a href="#Roles">Roles</a>
-          <a href="#Permisos">Permisos</a>
-        </div>
+      <div class="dropdown"> <button class="dropbtn">Administracion&darr;</button>
+        <div class="dropdown-content"> <a href="#">Usuarios</a> <a href="#Roles">Roles</a> <a href="#Permisos">Permisos</a> </div>
       </div>
-      <form action="#">
-        <input type="search" placeholder="Buscar.." name="busqueda">
-        <button> Busqueda </button>
-        <a href="login.html"> Login</a>
-      </form>
+      <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda"> <button> Busqueda </button> <a href="login.html"> Login</a>        </form>
     </div>
   </nav>
-</head>
-<!-- RAYA SEPARADORA -->
-<hr>
-
-<body> </body>
-<!-- CODIGO DUPLICADO. DEBE IR EN UN ARCHIVO QUE SE INCLUYA EN TODOS -->
-<footer class="bottom-page-footer">
   <hr>
-  <p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
-  <p class="right-footer-paragraph">v 0.1.0</p>
-</footer>
+  <footer class="bottom-page-footer">
+    <hr>
+    <p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
+    <p class="right-footer-paragraph">v 0.1.0</p>
+  </footer>
+</body>
 
 </html>
