--- a/index.html
+++ b/index.html
@@ -2,58 +2,44 @@
 <html lang="es">
 
 <head>
-    <title>Hospital Dr. Ricardo Gutierréz</title>
-    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="css/index.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <!-- BARRA DE NAVEGACION -->
-    <nav> LOGO |
-        <a href="#">Hospital Dr. Ricardo Gutierréz</a> |
-        <div class="search-container">
-            <form action="#">
-                <input type="search" placeholder="Buscar.." name="busqueda">
-                <button> Busqueda </button>
-                <a href="login.html"> Login</a>
-            </form>
-        </div>
-    </nav>
+  <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+  <link rel="stylesheet" type="text/css" href="css/index.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <title>Hospital Dr. Ricardo Gutierréz</title>
 </head>
-<!-- RAYA SEPARADORA -->
-<hr>
 
 <body>
-    <!-- INFORMACION DE LA PAGINA -->
-    <div class="label-text-container">
-        <div class="label-text">
-            <h3 class="label-text-header"> TITULO 1 </h3>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-            <button> Más info >></button>
-        </div>
-        <div class="label-text">
-            <h3 class="label-text-header"> TITULO 2 </h3>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-            <button> Más info >></button>
-        </div>
-        <div class="label-text">
-            <h3 class="label-text-header"> TITULO 3 </h3>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-            <button> Más info >></button>
-        </div>
+  <div> LOGO | Hospital Dr. Ricardo Gutierréz
+    <div class="search-container">
+      <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda"> <button> Busqueda </button> <a href="login.html"> Login</a>        </form>
     </div>
-</body>
-<footer class="bottom-page-footer">
+  </div>
+  <hr>
+  <div class="label-text-container">
+    <div class="label-text">
+      <h3 class="label-text-header"> TITULO 1 </h3>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p> <button> Más info >></button>      </div>
+    <div class="label-text">
+      <h3 class="label-text-header"> TITULO 2 </h3>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p> <button> Más info >></button>      </div>
+    <div class="label-text">
+      <h3 class="label-text-header"> TITULO 3 </h3>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p> <button> Más info >></button>      </div>
+  </div>
+  <footer class="bottom-page-footer">
     <hr>
     <p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
     <p class="right-footer-paragraph">v 0.1.0</p>
-</footer>
+  </footer>
+</body>
 
 </html>
