--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="es">
 
 <head>
+    
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
