--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div> LOGO | Hospital Dr. Ricardo Gutierréz
-    <div class="search-container">
+    <div class="header .container">
       <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda"> <button> Busqueda </button> <a href="login.html"> Login</a>        </form>
     </div>
   </div>
