--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div> LOGO | Hospital Dr. Ricardo Gutierréz
-    <div class="header .container">
+    <div class=".container">
       <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda"> <button> Busqueda </button> <a href="login.html"> Login</a>        </form>
     </div>
   </div>
@@ -39,7 +39,7 @@
         nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
         anim id est laborum. </p> <button> Más info >></button> </div>
   </div>
-  <footer class="bottom-page-footer">
+  <footer class=".footer">
     <hr>
     <p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
     <p class="right-footer-paragraph">v 0.1.0</p>
