--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <div class="header.container"> 
   <div> LOGO | Hospital Dr. Ricardo Gutierréz
     <div class=".container">
       <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda"> <button> Busqueda </button> <a href="login.html"> Login</a>        </form>
