--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   </div>
   <footer class=".footer">
     <hr>
-    <p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
-    <p class="right-footer-paragraph">v 0.1.0</p>
+    <p>Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
+    <p>v 0.1.0</p>
   </footer>
 </body>
 
