--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
   </div>
   <hr>
-  <div class="main-content">
+  <div class="label-text-container">
     <div class="label-text">
       <h3 class="label-text-header"> TITULO 1 </h3>
       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
