--- a/administracion.html
+++ b/administracion.html
@@ -11,7 +11,7 @@
 
 <body>
   <nav> <a href="index.html">Inicio</a> <a href="#Paciente">Paciente</a>
-    <div class=".container">
+    <div class="search-container">
       <div class="dropdown"> <button class="dropbtn">Administracion&darr;</button>
         <div class="dropdown-content"> <a href="#">Usuarios</a> <a href="#Roles">Roles</a> <a href="#Permisos">Permisos</a> </div>
       </div>
