--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div> LOGO | Hospital Dr. Ricardo Gutierréz
     <div class="search-container">
-      <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda"> <button> Busqueda </button> <a href="login.html"> Login</a>        </form>
+      <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda"> <button> Buscar </button> <a href="login.html"> Login</a>        </form>
     </div>
   </div>
   <hr>
