--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <nav> LOGO <a href="index.html">Hospital Dr. Ricardo Gutierréz</a> </nav>
+  <nav> LOGO | <a href="index.html">Hospital Dr. Ricardo Gutierréz</a> </nav>
   <hr>
   <div class="login-menu">
     <form action="#" method="post">
