--- a/login.html
+++ b/login.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <nav> LOGO | <a href="index.html">Hospital Dr. Ricardo Gutierréz</a> </nav>
-  <hr>
+   <nav> LOGO | <a href="index.html" class='link1'>Hospital Dr. Ricardo Gutiérrez</a> </nav>
+  <hr class="separatingStripe">
   <div class="login-menu">
     <form action="#" method="post">
       <div>Usuario </div> <input type="text" required name="usuario" id="usuario" title="usuario" placeholder="Usuario">
@@ -20,7 +20,7 @@
     </form>
   </div>
   <footer class="bottom-page-footer">
-    <hr>
+      <hr class="separatingStripe">
     <p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
     <p class="right-footer-paragraph">v 0.1.0</p>
   </footer>
