Faltaba un acento

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
- <nav> LOGO |  <a href="index.html" class='link1'>Hospital Dr. Ricardo Gutierréz</a>
+ <nav> LOGO |  <a href="index.html" class='link1'>Hospital Dr. Ricardo Gutiérrez</a>
     <div class="search-container">
       <form action="#" id="searchform"> 
           <input type="text" placeholder="Buscar aqu&iacute;..." name="busqueda"> 
