--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
     <form action="#" method="post">
       <div>Usuario </div> <input type="text" required name="usuario" id="usuario" title="usuario" placeholder="Usuario">
       <div>Contraseña </div> <input type="password" required name="contra" id="contra" title="contra" placeholder="Contraseña">      <br> <br>
-      <div class="login-accept-button"> <input type="submit" value="Aceptar"> </div>
+      <div class="login-accept-button"> <button type= "submit" id='btnSubmit'> Aceptar </button> </div>
     </form>
   </div>
   <footer class="bottom-page-footer">
