--- a/administracion.html
+++ b/administracion.html
@@ -10,17 +10,23 @@
 </head>
 
 <body>
-  <nav> <a href="index.html">Inicio</a> <a href="#Paciente">Paciente</a>
-    <div class="dropdown"> <button class="dropbtn">Administracion&darr;</button>
+  <nav>  
+    <a href="index.html" class="link1">Inicio</a>  
+    <a href="#Paciente"  class="link1"> Paciente</a>
+    <div class="dropdown"> 
+        <button class="dropbtn">Administracion&darr;</button>
       <div class="dropdown-content"> <a href="#">Usuarios</a> <a href="#Roles">Roles</a> <a href="#Permisos">Permisos</a> </div>
     </div>
     <div class="search-container">
-      <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda"> <button> Busqueda </button> <a href="login.html"> Login</a>        </form>
+      <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda"> 
+        <button type= "submit" id='btnSubmit'> Busqueda </button>  
+        <a href="login.html" class= "link1" > LOGIN </a>        
+      </form>
     </div>
   </nav>
-  <hr>
+   <hr class= "separatingStripe">
   <footer class="bottom-page-footer">
-    <hr>
+      <hr class= "separatingStripe">
     <p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
     <p class="right-footer-paragraph">v 0.1.0</p>
   </footer>
