Estilos en los titulos

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
   <hr class= "separatingStripe">
   <div class="label-text-container">
     <div class="label-text">
-      <h3 class="label-text-header"> 
-         <span class="text1"> El Hospital</span> 
-      </h3>
+     <h3 class="label-text-header"> <span class="text1">El Hospital</span> </h3>
       <p> Este centro de salud tiene un programa de residencias de primer nivel en el pais. Se ofrecen oportunidades
         de prática intensiva y supervisada en ámbitos profesionales y por la misma -por supuesto- se recibe un
         salario mensual, acorde a lo que la regulación médica profesional lo indica en cada momento.</p> 
