Se incorpora un titulo Iniciar sesión

--- a/login.html
+++ b/login.html
@@ -10,17 +10,28 @@
 </head>
 
 <body>
-   <nav> LOGO | <a href="index.html" class='link1'>Hospital Dr. Ricardo Gutiérrez</a> </nav>
+
+  <nav> LOGO | <a href="index.html" class='link1'>Hospital Dr. Ricardo Gutiérrez</a> </nav>
   <hr class="separatingStripe">
   <div class="login-menu">
+   <div class="login-menu-title"> 
+    <span class="text1"> Iniciar sesión </span>
+   </div>
+
     <form action="#" method="post">
-      <div>Usuario </div> <input type="text" required name="usuario" id="usuario" title="usuario" placeholder="Usuario">
-      <div>Contraseña </div> <input type="password" required name="contra" id="contra" title="contra" placeholder="Contraseña">      <br> <br>
-      <div class="login-accept-button"> <button type= "submit" id='btnSubmit'> Aceptar </button> </div>
+    <br>
+      <div>Usuario </div>
+      <input type="text" required name="usuario" id="usuario" title="usuario" placeholder="Usuario">
+      <div>Contraseña </div>
+      <input type="password" required name="contra" id="contra" title="contra" placeholder="Contraseña">      
+      <br> <br>
+      <div class="login-accept-button">   
+      <button type= "submit" id='btnSubmit'> Aceptar </button>
+        </div>
     </form>
   </div>
   <footer class="bottom-page-footer">
-      <hr class="separatingStripe">
+    <hr>
     <p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
     <p class="right-footer-paragraph">v 0.1.0</p>
   </footer>
