Faltaba clase en la etiqueta hr

--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
     </form>
   </div>
   <footer class="bottom-page-footer">
-    <hr>
+    <hr class="separatingStripe">
     <p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
     <p class="right-footer-paragraph">v 0.1.0</p>
   </footer>
