Boton login manda a la pagina de administracion

--- a/login.html
+++ b/login.html
@@ -14,18 +14,18 @@
   <nav> LOGO | <a href="index.html" class='link1'>Hospital Dr. Ricardo Gutiérrez</a> </nav>
   <hr class="separatingStripe">
   <div class="login-menu">
-   <div class="login-menu-title"> 
+   <div class="login-menu-title">
     <span class="text1"> Iniciar sesión </span>
    </div>
 
-    <form action="#" method="post">
+    <form action="administracion.html" method="post">
     <br>
       <div>Usuario </div>
       <input type="text" required name="usuario" id="usuario" title="usuario" placeholder="Usuario">
       <div>Contraseña </div>
-      <input type="password" required name="contra" id="contra" title="contra" placeholder="Contraseña">      
+      <input type="password" required name="contra" id="contra" title="contra" placeholder="Contraseña">
       <br> <br>
-      <div class="login-accept-button">   
+      <div class="login-accept-button">
       <button type= "submit" id='btnSubmit'> Aceptar </button>
         </div>
     </form>
